[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "the_vault"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0.0",
    "argon2-cffi>=23.1.0",
]

[project.optional-dependencies]
dev = ["ipython", "pytest", "ruff"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
